# orbit

./: .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  package.json  pyproject.toml
.claude/: launch.json
.codex/: config.toml
.dev_loop/: team.json  workflow.json
agents/: _protocol.md  _template.md  architect.md  hub.md  implementer.md  integrator.md  product_designer.md  refactorer.md  reviewer.md  security_auditor.md  tester.md  ui_designer.md
docs/: agentic-workflow-implementation-plan.md  agentic-workflow-step-1-tasks.md  agentic-workflow-step-10-tasks.md  agentic-workflow-step-11-tasks.md  agentic-workflow-step-12-tasks.md  agentic-workflow-step-2-tasks.md  agentic-workflow-step-3-benchmark.md  agentic-workflow-step-3-tasks.md  agentic-workflow-step-4-tasks.md  agentic-workflow-step-5-benchmark.md  agentic-workflow-step-5-tasks.md  agentic-workflow-step-6-tasks.md  agentic-workflow-step-7-tasks.md  agentic-workflow-step-8-tasks.md  agentic-workflow-step-9-tasks.md  general-workflow-design.md  release-notes-runtime-cutover.md  workflow-list-view-design.md  workflow-new.md  workflow-runtime-clean-migration-plan.md  workflow-runtime-design.md  架构说明.md
docs/adr/: 001-self-built-durable-kernel.md  002-plan-patch-stable.md
docs/migration/: m0-baseline.md  m1b-behaviour-inventory.md  unwired-capabilities.md
docs/operations/: backup-upgrade.md  capacity.md  recovery.md  runbook.md  security.md
docs/ui/: Future Agent Workflow UI 设计理念.md  agent-workflow-ui-api-contract.md  agent-workflow-ui-implementation.md  runtime-ui-prototype-delivery-plan.md  workflow-editor-implementation-plan.md  workflow-prompt-authoring.md
prototypes/: README.md  runtime-ui.html
scripts/: benchmark_workflow_persistence.py
src/dev_loop/: __init__.py  __main__.py  project_index.py  server.py  store.py
src/orbit/: __init__.py  __main__.py  agent_tools.py  app.py  environments.py  http_api.py  hub_inspection.py  local_runtime.py  node_handlers.py  process_control.py  project_index.py  project_lock.py  recovery.py  run_logs.py  runner.py  runner_prompts.py  runner_protocol.py  server.py  settings.py  store.py  token_usage.py  verification.py  workflow_config.py  worktrees.py  (+4 more)
tests/: test_adapter_parity.py  test_agent_discovery.py  test_agent_prompt_cli.py  test_api_kill_points.py  test_api_v1.py  test_browser_e2e.py  test_capacity.py  test_clean_install.py  test_cli_matrix.py  test_cutover.py  test_db_check_cli.py  test_dev_tool_budget.py  test_dev_tool_composition.py  test_dev_tools.py  test_dynamic_read_models.py  test_e2e_run_lifecycle.py  test_environments.py  test_graph_layout.py  test_idempotency.py  test_local_runtime.py  test_mcp.py  test_migration_guard.py  test_packaging.py  test_plan_read_models.py  test_platform_process.py  test_platform_projects.py  test_project_index.py  test_recovery_plan_version.py  test_recovery_wiring.py  test_restart_recovery.py  test_run_cli.py  test_security.py  test_store.py  test_subflow.py  test_ui_assets.py  test_ui_client_modules.py  test_ui_contract_goldens.py  test_visual_regression.py  test_web_composition.py  test_workflow_advanced.py  (+42 more)
(+261 files in other folders)
