[project]
name = "orbit"
version = "0.1.0"
description = "Local multi-agent workflow orchestrator that runs coding tasks across agent CLIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.29",
]

[project.scripts]
orbit = "orbit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit"]
# Non-Python resources (the Web UI, the vendored dagre bundle, role templates)
# are loaded via importlib.resources at runtime. hatchling already ships every
# non-ignored file under the package tree, so they are included automatically —
# a force-include table here only duplicates them and makes the wheel build fail
# with "a second file is being added to the wheel archive at the same path".
