[project]
name = "orbit"
dynamic = ["version"]
description = "Local durable workflow runtime for agent work"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.23",
    "PyYAML>=6.0",
    "starlette>=0.37",
    "uvicorn>=0.29",
]

# Test-only. playwright is never imported by the package; the browser suite
# skips when it is absent, so a plain install stays four dependencies deep.
[project.optional-dependencies]
dev = ["playwright>=1.45"]

[project.scripts]
orbit = "orbit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version: src/orbit/__init__.py's __version__.
[tool.hatch.version]
path = "src/orbit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit"]
# Non-Python resources (the Web UI and vendored dagre bundle)
# are loaded via importlib.resources at runtime. hatchling already ships every
# non-ignored file under the package tree, so they are included automatically —
# a force-include table here only duplicates them and makes the wheel build fail
# with "a second file is being added to the wheel archive at the same path".
